kubernetes/external/trilium/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trilium-external-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "trilium-external-svc"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - trilium.bbg.pe
    secretName: trilium-external-tls
  rules:
  - host: trilium.bbg.pe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trilium-external-svc
            port:
              number: 80
